// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Vegan Gelato Engine — real Mapper formulation matrix > almond routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 5.193,
    "fiber": 4.457,
    "ice": 45.903,
    "ingredients": [
      {
        "grams": 460,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 224,
        "id": "PI-ING-001587",
        "main": false,
        "name": "ALMOND DRINK · Beverage · Chilled",
      },
      {
        "grams": 47,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 166,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 54,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 47,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 41.145,
    "pac": 27.57,
    "pod": 21.416,
    "protein": 0.157,
    "score": 10,
    "solids": 32.992,
    "sugars": 22.287,
    "temperature": -11,
    "violations": [],
    "water": 67.008,
  },
  {
    "batch": 1000,
    "fat": 5.85,
    "fiber": 5.005,
    "ice": 50.282,
    "ingredients": [
      {
        "grams": 397,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 250,
        "id": "PI-ING-001587",
        "main": false,
        "name": "ALMOND DRINK · Beverage · Chilled",
      },
      {
        "grams": 53,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 145,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 100,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 53,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 53.083,
    "pac": 33.689,
    "pod": 22.58,
    "protein": 0.175,
    "score": 10,
    "solids": 36.536,
    "sugars": 24.502,
    "temperature": -12,
    "violations": [],
    "water": 63.464,
  },
  {
    "batch": 1000,
    "fat": 5.85,
    "fiber": 5.005,
    "ice": 49.532,
    "ingredients": [
      {
        "grams": 397,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 250,
        "id": "PI-ING-001587",
        "main": false,
        "name": "ALMOND DRINK · Beverage · Chilled",
      },
      {
        "grams": 53,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 95,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 150,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 53,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 58.607,
    "pac": 37.429,
    "pod": 20.984,
    "protein": 0.175,
    "score": 10,
    "solids": 36.136,
    "sugars": 24.102,
    "temperature": -13,
    "violations": [],
    "water": 63.864,
  },
]
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > banana routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 2.602,
    "fiber": 4.03,
    "ice": 48.981,
    "ingredients": [
      {
        "grams": 324,
        "id": "PI-ING-001589",
        "main": true,
        "name": "BANANA · Puree",
      },
      {
        "grams": 296,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 155,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 24,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 143,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 13,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 43,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 38.228,
    "pac": 26.384,
    "pod": 22.255,
    "protein": 0.386,
    "score": 10,
    "solids": 30.983,
    "sugars": 22.093,
    "temperature": -11,
    "violations": [],
    "water": 69.017,
  },
  {
    "batch": 1000,
    "fat": 3.026,
    "fiber": 4.57,
    "ice": 50.336,
    "ingredients": [
      {
        "grams": 324,
        "id": "PI-ING-001589",
        "main": true,
        "name": "BANANA · Puree",
      },
      {
        "grams": 248,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 174,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 28,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 128,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 47,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 49,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 46.655,
    "pac": 30.918,
    "pod": 23.148,
    "protein": 0.394,
    "score": 10,
    "solids": 33.73,
    "sugars": 23.799,
    "temperature": -12,
    "violations": [],
    "water": 66.27,
  },
  {
    "batch": 1000,
    "fat": 3.029,
    "fiber": 4.66,
    "ice": 49.732,
    "ingredients": [
      {
        "grams": 324,
        "id": "PI-ING-001589",
        "main": true,
        "name": "BANANA · Puree",
      },
      {
        "grams": 243,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 176,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 28,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 88,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 89,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 50,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 51.692,
    "pac": 34.269,
    "pod": 22.015,
    "protein": 0.394,
    "score": 10,
    "solids": 33.704,
    "sugars": 23.671,
    "temperature": -13,
    "violations": [],
    "water": 66.296,
  },
]
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > calculates verified pea/rice proteins without any dairy gate 1`] = `
{
  "batch": 1000,
  "fat": 5.765,
  "fiber": 4.994,
  "ice": 49.498,
  "ingredients": [
    {
      "grams": 377,
      "id": "PI-ING-001409",
      "main": false,
      "name": "Water",
    },
    {
      "grams": 250,
      "id": "PI-ING-001565",
      "main": false,
      "name": "OAT DRINK · Beverage · Chilled · BIO",
    },
    {
      "grams": 53,
      "id": "PI-ING-000163",
      "main": false,
      "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
    },
    {
      "grams": 95,
      "id": "PI-ING-000514",
      "main": false,
      "name": "Sucrose",
    },
    {
      "grams": 150,
      "id": "PI-ING-000494",
      "main": false,
      "name": "Dextrose (monohydrate)",
    },
    {
      "grams": 53,
      "id": "PI-ING-000456",
      "main": false,
      "name": "Inulin",
    },
    {
      "grams": 2,
      "id": "PI-ING-000492",
      "main": false,
      "name": "Tara gum",
    },
    {
      "grams": 10,
      "id": "PI-ING-000451",
      "main": false,
      "name": "PEA PROTEIN · Protein · Dry",
    },
    {
      "grams": 10,
      "id": "PI-ING-000452",
      "main": false,
      "name": "RICE PROTEIN · Protein · Dry",
    },
  ],
  "npac": 59.765,
  "pac": 37.213,
  "pod": 20.737,
  "protein": 1.757,
  "score": 10,
  "solids": 37.734,
  "sugars": 24.325,
  "violations": [],
  "water": 62.266,
}
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > cocoa routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 5.8,
    "fiber": 6.85,
    "ice": 45.272,
    "ingredients": [
      {
        "grams": 60,
        "id": "PI-ING-001578",
        "main": true,
        "name": "COCOA ALKALIZED 100% · Cacao Barry Cocoa Powder",
      },
      {
        "grams": 371,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 246,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 41,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 206,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 19,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 55,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 41.743,
    "pac": 25.141,
    "pod": 22.926,
    "protein": 1.232,
    "score": 10,
    "solids": 39.773,
    "sugars": 23.357,
    "temperature": -11,
    "violations": [],
    "water": 60.227,
  },
  {
    "batch": 1000,
    "fat": 5.906,
    "fiber": 7.03,
    "ice": 50.327,
    "ingredients": [
      {
        "grams": 60,
        "id": "PI-ING-001578",
        "main": true,
        "name": "COCOA ALKALIZED 100% · Cacao Barry Cocoa Powder",
      },
      {
        "grams": 359,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 251,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 42,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 170,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 59,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 57,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 47.739,
    "pac": 28.557,
    "pod": 22.07,
    "protein": 1.234,
    "score": 10,
    "solids": 40.182,
    "sugars": 23.457,
    "temperature": -12,
    "violations": [],
    "water": 59.818,
  },
  {
    "batch": 1000,
    "fat": 5.906,
    "fiber": 7.03,
    "ice": 49.676,
    "ingredients": [
      {
        "grams": 60,
        "id": "PI-ING-001578",
        "main": true,
        "name": "COCOA ALKALIZED 100% · Cacao Barry Cocoa Powder",
      },
      {
        "grams": 359,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 251,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 42,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 120,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 109,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 57,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 53.633,
    "pac": 32.297,
    "pod": 20.474,
    "protein": 1.234,
    "score": 10,
    "solids": 39.782,
    "sugars": 23.057,
    "temperature": -13,
    "violations": [],
    "water": 60.218,
  },
]
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > keeps the invalid coconut-milk high-water reference blocked and rescues a verified high-water alternative 1`] = `
{
  "before": {
    "batch": 1000,
    "fat": 2.325,
    "fiber": 4.93,
    "ice": 50.575,
    "ingredients": [
      {
        "grams": 250,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 550,
        "id": "water",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 20,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 70,
        "id": "sucrose",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 55,
        "id": "dextrose",
        "main": false,
        "name": "Dextrose",
      },
      {
        "grams": 53,
        "id": "inulin",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "tara_gum",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 22.615,
    "pac": 17.814,
    "pod": 11.769,
    "protein": 0.1,
    "score": 5,
    "solids": 21.226,
    "sugars": 13.085,
    "violations": [
      "npac",
      "pod",
      "water",
      "total_solids",
    ],
    "water": 78.774,
  },
  "rejectedAfter": {
    "batch": 1000,
    "fat": 1.634,
    "fiber": 19.15,
    "ice": 49.669,
    "ingredients": [
      {
        "grams": 180,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 396,
        "id": "water",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 14,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 51,
        "id": "sucrose",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 146,
        "id": "dextrose",
        "main": false,
        "name": "Dextrose",
      },
      {
        "grams": 211,
        "id": "inulin",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "tara_gum",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 53.877,
    "pac": 31.485,
    "pod": 15.778,
    "protein": 0.072,
    "score": 10,
    "solids": 41.561,
    "sugars": 19.27,
    "violations": [],
    "water": 58.439,
  },
}
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > neutral routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 5.098,
    "fiber": 4.57,
    "ice": 45.58,
    "ingredients": [
      {
        "grams": 448,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 229,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 48,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 169,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 55,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 49,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 41.451,
    "pac": 27.614,
    "pod": 21.583,
    "protein": 0.092,
    "score": 10,
    "solids": 33.382,
    "sugars": 22.899,
    "temperature": -11,
    "violations": [],
    "water": 66.618,
  },
  {
    "batch": 1000,
    "fat": 5.625,
    "fiber": 4.93,
    "ice": 50.292,
    "ingredients": [
      {
        "grams": 397,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 250,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 53,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 145,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 100,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 53,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 51.979,
    "pac": 33.18,
    "pod": 22.333,
    "protein": 0.1,
    "score": 10,
    "solids": 36.166,
    "sugars": 24.725,
    "temperature": -12,
    "violations": [],
    "water": 63.834,
  },
  {
    "batch": 1000,
    "fat": 5.625,
    "fiber": 4.93,
    "ice": 49.565,
    "ingredients": [
      {
        "grams": 397,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 250,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 53,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 95,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 150,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 53,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 57.478,
    "pac": 36.921,
    "pod": 20.737,
    "protein": 0.1,
    "score": 10,
    "solids": 35.766,
    "sugars": 24.325,
    "temperature": -13,
    "violations": [],
    "water": 64.234,
  },
]
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > pistachio routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 9.141,
    "fiber": 6.22,
    "ice": 46.364,
    "ingredients": [
      {
        "grams": 120,
        "id": "PI-ING-000614",
        "main": true,
        "name": "PISTACHIO · Aldori Paste · 100% Nut",
      },
      {
        "grams": 332,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 262,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 34,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 167,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 29,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 54,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 40.708,
    "pac": 23.951,
    "pod": 20.673,
    "protein": 2.505,
    "score": 10,
    "solids": 41.163,
    "sugars": 21.366,
    "temperature": -11,
    "violations": [],
    "water": 58.837,
  },
  {
    "batch": 1000,
    "fat": 9.141,
    "fiber": 6.22,
    "ice": 50.345,
    "ingredients": [
      {
        "grams": 120,
        "id": "PI-ING-000614",
        "main": true,
        "name": "PISTACHIO · Aldori Paste · 100% Nut",
      },
      {
        "grams": 332,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 262,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 34,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 127,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 69,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 54,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 45.545,
    "pac": 26.943,
    "pod": 19.396,
    "protein": 2.505,
    "score": 10,
    "solids": 40.843,
    "sugars": 21.046,
    "temperature": -12,
    "violations": [],
    "water": 59.157,
  },
  {
    "batch": 1000,
    "fat": 9.141,
    "fiber": 6.22,
    "ice": 49.737,
    "ingredients": [
      {
        "grams": 120,
        "id": "PI-ING-000614",
        "main": true,
        "name": "PISTACHIO · Aldori Paste · 100% Nut",
      },
      {
        "grams": 332,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 262,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 34,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 77,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 119,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 54,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 51.519,
    "pac": 30.683,
    "pod": 17.8,
    "protein": 2.505,
    "score": 10,
    "solids": 40.443,
    "sugars": 20.646,
    "temperature": -13,
    "violations": [],
    "water": 59.557,
  },
]
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > preserves the Strawberry/Banana 1:1 Multi-Main contract 1`] = `
{
  "batch": 1000,
  "fat": 3.722,
  "fiber": 5.86,
  "ice": 49.566,
  "ingredients": [
    {
      "grams": 150,
      "id": "PI-ING-001589",
      "main": true,
      "name": "BANANA · Puree",
    },
    {
      "grams": 150,
      "id": "PI-ING-001553",
      "main": true,
      "name": "STRAWBERRIES · Fresh Fruit",
    },
    {
      "grams": 176,
      "id": "PI-ING-001409",
      "main": false,
      "name": "Water",
    },
    {
      "grams": 213,
      "id": "PI-ING-001565",
      "main": false,
      "name": "OAT DRINK · Beverage · Chilled · BIO",
    },
    {
      "grams": 34,
      "id": "PI-ING-000163",
      "main": false,
      "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
    },
    {
      "grams": 107,
      "id": "PI-ING-000514",
      "main": false,
      "name": "Sucrose",
    },
    {
      "grams": 108,
      "id": "PI-ING-000494",
      "main": false,
      "name": "Dextrose (monohydrate)",
    },
    {
      "grams": 60,
      "id": "PI-ING-000456",
      "main": false,
      "name": "Inulin",
    },
    {
      "grams": 2,
      "id": "PI-ING-000492",
      "main": false,
      "name": "Tara gum",
    },
  ],
  "npac": 57.421,
  "pac": 36.317,
  "pod": 22.944,
  "protein": 0.34,
  "score": 10,
  "solids": 36.753,
  "sugars": 25.139,
  "violations": [],
  "water": 63.247,
}
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > preserves the Strawberry/Banana 2:1 Multi-Main contract 1`] = `
{
  "batch": 1000,
  "fat": 3.707,
  "fiber": 5.76,
  "ice": 49.508,
  "ingredients": [
    {
      "grams": 200,
      "id": "PI-ING-001589",
      "main": true,
      "name": "BANANA · Puree",
    },
    {
      "grams": 100,
      "id": "PI-ING-001553",
      "main": true,
      "name": "STRAWBERRIES · Fresh Fruit",
    },
    {
      "grams": 176,
      "id": "PI-ING-001409",
      "main": false,
      "name": "Water",
    },
    {
      "grams": 213,
      "id": "PI-ING-001565",
      "main": false,
      "name": "OAT DRINK · Beverage · Chilled · BIO",
    },
    {
      "grams": 34,
      "id": "PI-ING-000163",
      "main": false,
      "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
    },
    {
      "grams": 107,
      "id": "PI-ING-000514",
      "main": false,
      "name": "Sucrose",
    },
    {
      "grams": 108,
      "id": "PI-ING-000494",
      "main": false,
      "name": "Dextrose (monohydrate)",
    },
    {
      "grams": 60,
      "id": "PI-ING-000456",
      "main": false,
      "name": "Inulin",
    },
    {
      "grams": 2,
      "id": "PI-ING-000492",
      "main": false,
      "name": "Tara gum",
    },
  ],
  "npac": 59.42,
  "pac": 37.21,
  "pod": 23.591,
  "protein": 0.355,
  "score": 10,
  "solids": 37.378,
  "sugars": 25.769,
  "violations": [],
  "water": 62.622,
}
`;

exports[`Vegan Gelato Engine — real Mapper formulation matrix > strawberry routes distinctly across −11/−12/−13 1`] = `
[
  {
    "batch": 1000,
    "fat": 3.673,
    "fiber": 6.118,
    "ice": 45.036,
    "ingredients": [
      {
        "grams": 324,
        "id": "PI-ING-001553",
        "main": true,
        "name": "STRAWBERRIES · Fresh Fruit",
      },
      {
        "grams": 156,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 212,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 33,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 196,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 18,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 59,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 41.966,
    "pac": 27.043,
    "pod": 23.939,
    "protein": 0.312,
    "score": 10,
    "solids": 35.559,
    "sugars": 24.004,
    "temperature": -11,
    "violations": [],
    "water": 64.441,
  },
  {
    "batch": 1000,
    "fat": 3.774,
    "fiber": 6.208,
    "ice": 50.335,
    "ingredients": [
      {
        "grams": 324,
        "id": "PI-ING-001553",
        "main": true,
        "name": "STRAWBERRIES · Fresh Fruit",
      },
      {
        "grams": 152,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 213,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 34,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 157,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 58,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 60,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 46.759,
    "pac": 30.14,
    "pod": 22.767,
    "protein": 0.312,
    "score": 10,
    "solids": 35.542,
    "sugars": 23.788,
    "temperature": -12,
    "violations": [],
    "water": 64.458,
  },
  {
    "batch": 1000,
    "fat": 3.774,
    "fiber": 6.208,
    "ice": 49.716,
    "ingredients": [
      {
        "grams": 324,
        "id": "PI-ING-001553",
        "main": true,
        "name": "STRAWBERRIES · Fresh Fruit",
      },
      {
        "grams": 152,
        "id": "PI-ING-001409",
        "main": false,
        "name": "Water",
      },
      {
        "grams": 213,
        "id": "PI-ING-001565",
        "main": false,
        "name": "OAT DRINK · Beverage · Chilled · BIO",
      },
      {
        "grams": 34,
        "id": "PI-ING-000163",
        "main": false,
        "name": "REFINED COCONUT OIL · Elstar Fats Coconut · Dry",
      },
      {
        "grams": 107,
        "id": "PI-ING-000514",
        "main": false,
        "name": "Sucrose",
      },
      {
        "grams": 108,
        "id": "PI-ING-000494",
        "main": false,
        "name": "Dextrose (monohydrate)",
      },
      {
        "grams": 60,
        "id": "PI-ING-000456",
        "main": false,
        "name": "Inulin",
      },
      {
        "grams": 2,
        "id": "PI-ING-000492",
        "main": false,
        "name": "Tara gum",
      },
    ],
    "npac": 52.237,
    "pac": 33.88,
    "pod": 21.171,
    "protein": 0.312,
    "score": 10,
    "solids": 35.142,
    "sugars": 23.389,
    "temperature": -13,
    "violations": [],
    "water": 64.858,
  },
]
`;
